# my-arduino

./: .gitignore  .gitmodules  Arduino.mk
blink/: Makefile  blink.ino
color_change/src/: color_change.ino
esp8266/echoserver/: CMakeLists.txt
esp8266/echoserver/src/: fuck.h  user_config.h.in  user_main.cpp
esp8266/light-switch/: .gitignore  CMakeLists.txt  platformio.ini
esp8266/light-switch/lib/secret/: readme.md
esp8266/light-switch/src/: main.cpp
ethernet/: Makefile  ethernet.ino  rgb_url.hpp
ethernet/test/: Makefile  test_rgb_url.cpp
floor-light/: CMakeLists.txt  platformio.ini
floor-light/src/: MovementReaction.hpp  SerialLogger.cpp  main.cpp
free_memory/: Makefile  free_memory.ino
hello/src/: hello.ino
humidity/: Makefile  humidity.ino
lcd/: Makefile  lcd.ino
mh-z19b/: CMakeLists.txt  platformio.ini
mh-z19b/src/: main.cpp
movement/: Makefile  movement.ino
movement-to-rc/: CMakeLists.txt
movement-to-rc/src/: MovementToRc.hpp  SerialLogger.hpp  main.cpp
mylib/ArduinoPlug/: ArduinoPlug.hpp
mylib/Logger/: DummyLogger.hpp  Logger.hpp  SerialLogger.cpp  SerialLogger.hpp  StreamLogger.hpp
mylib/MH-Z19B/: MhZ19b.hpp
mylib/MovementReaction/: library.json
mylib/Timer/: Timer.cpp  Timer.hpp
rc-sniffer/: CMakeLists.txt  platformio.ini
rc-sniffer/src/: main.cpp
relay/: relay.ino
remote_ir/: dump.txt  remote_ir_record.ino  render_dump.py
remote_ir/dump/: 0.txt  1.txt  100+.txt  2.txt  200+.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  ch+.txt  ch-.txt  ch.txt  eq.txt  minus.txt  next.txt  playpause.txt  plus.txt  prev.txt
servo/src/: servo.ino
stepper/src/: stepper.ino
temp_lcd/: Makefile  platformio.ini  temp_lcd.ino
temp_lcd/lib/: DHT  LiquidCrystal_I2C
temp_lcd/libraries/: DHT  LiquidCrystal_I2C
temp_lcd/src/: temp_lcd.ino
